<resources>
    <string name="app_name">Nilo Client</string>
    <string name="product_create">Crear</string>
    <string name="product_name">Nombre del producto</string>
    <string name="description">Descripción</string>
    <string name="quantity">Cantidad</string>
    <string name="price">Precio</string>
    <string name="car_empty">Carrito vacío</string>
    <string name="car_full">Total: S/%1$.2f </string>
    <string name="view_car">Ver Carrito</string>
    <string name="cart_title">Carrito de compra</string>
    <string name="cart_pay">Pagar</string>
    <string name="text_add_to_cart">Añadir al carrito</string>
    <string name="detail_quantity">Disponibles: %1$d</string>
    <string name="total_price">&lt;b>&lt;big>Total: S/ %1$.2f&lt;big/> S&lt;/b>&lt;br/> (%2$d x $%3$.2f)</string>
    <string name="order_track">Seguir envío</string>
    <string name="order_status">Estado: %1$s</string>
    <string name="order_id">ID: %1$s</string>
    <string name="order_chat_help">Necesitas ayuda?</string>
    <string name="order_status_ordered">Aprovado</string>
    <string name="order_status_preparing">Procesado</string>
    <string name="order_status_sent">Enviado</string>
    <string name="order_status_delivered">Entregado</string>
    <string name="order_status_unknown">Desconocido</string>
    <string name="order_title">Historial de compras</string>
    <string name="track_title">Seguimiento</string>
    <string name="hint_chat_send">Escribe algo...</string>
    <string name="chat_title">Soporte</string>
    <string name="notification_channel_id">Nilo App</string>
    <string name="channel_name_nilo">Nilo</string>

    <string name="description_channel">Canal de notificación por defecto de nilo</string>

    <string name="facebook_application_id" translatable="false">681025193082526</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb681025193082526</string>
    <string name="welcome_text">Bienvenido porfavor inicie sesión</string>
    <string name="email_btn">Email</string>
    <string name="google_btn">Google</string>
    <string name="facebook_btn">Facebook</string>
    <string name="phone_btn">Phone</string>
    <string name="hint_full_name">Nombre completo</string>
    <string name="hint_photo_url">Url de foto</string>
    <string name="profile_update">Actualizar</string>
    <string name="profile">Perfil de usuario</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="prefs_fcm_title">Recibir notificaciones</string>
    <string name="prefs_offers_key">prefs_offers</string>
    <string name="prefs_offers_title">Ofertas y promociones</string>
    <string name="settings">Configuración</string>
    <string name="topic_offers">topic_offers</string>
    <string name="item_title_logout">Cerrar sesión</string>
    <string name="item_title_profile">Editar perfil</string>
    <string name="item_title_order">Historial de compras</string>
    <string name="promo_fragment_title">Promociones</string>


</resources>