<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/common_padding_min">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_min">
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnTrack"
            android:text="@string/order_track"
            app:icon="@drawable/ic_shipping"
            app:iconGravity="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvStatus"
            android:text="@string/order_status"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnTrack"
            app:layout_constraintBottom_toBottomOf="@id/btnTrack"
            app:layout_constraintEnd_toStartOf="@id/btnTrack"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvId"
            android:text="@string/order_id"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvProductNames"
            tools:text="disco duro, camisa, memorias usb,  lasptop"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvId"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTotalPrice"
            android:text="@string/car_full"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/chipChat"
            app:layout_constraintBottom_toBottomOf="@id/chipChat"
            />
        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chipChat"
            android:text="@string/order_chat_help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProductNames"
            app:layout_constraintBottom_toTopOf="@id/btnTrack"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>