<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/common_padding_default">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgView"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/tvWelcome"
        android:text="@string/welcome_text"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:gravity="center"
        android:layout_marginEnd="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgView"
        app:layout_constraintTop_toTopOf="@id/imgView"
        app:layout_constraintBottom_toBottomOf="@id/imgView"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineLogin"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="@dimen/login_width_button"
        android:layout_height="wrap_content"
        android:id="@+id/btnEmail"
        app:icon="@drawable/ic_email"
        android:text="@string/email_btn"
        android:backgroundTint="@color/orange_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintBottom_toTopOf="@id/guidelineLogin"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnGoogle"
        app:icon="@drawable/ic_google"
        android:backgroundTint="@color/blue_google"
        android:text="@string/google_btn"
        app:layout_constraintStart_toStartOf="@id/btnEmail"
        app:layout_constraintEnd_toEndOf="@id/btnEmail"
        app:layout_constraintTop_toBottomOf="@id/btnEmail"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnFacebook"
        app:icon="@drawable/ic_facebook"
        android:backgroundTint="@color/blue_facebook"
        android:text="@string/facebook_btn"
        app:layout_constraintStart_toStartOf="@id/btnEmail"
        app:layout_constraintEnd_toEndOf="@id/btnEmail"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnPhone"
        app:icon="@drawable/ic_phone"
        android:backgroundTint="@color/green_500"
        android:text="@string/phone_btn"
        app:layout_constraintStart_toStartOf="@id/btnEmail"
        app:layout_constraintEnd_toEndOf="@id/btnEmail"
        app:layout_constraintTop_toBottomOf="@id/btnFacebook"
       />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPolicy"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:gravity="center"
        tools:text="Términos y condiciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>