<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/common_padding_default">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilName"
        android:hint="@string/product_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etName"
            android:inputType="textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilDescription"
        android:hint="@string/description"
        android:layout_marginTop="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etDescription"
            android:inputType="textNoSuggestions|textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilQuantity"
        android:hint="@string/quantity"
        android:layout_marginTop="@dimen/common_padding_min"
        android:layout_marginEnd="@dimen/common_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tilDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etQuantity"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilPrice"
        android:hint="@string/price"
        android:layout_marginTop="@dimen/common_padding_min"
        android:layout_marginStart="@dimen/common_padding_min"
        app:prefixText="S"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPrice"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>
<ImageView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:id="@+id/imgProductPreview"
    android:background="@color/gray_100"
    android:layout_marginTop="@dimen/common_padding_min"
    android:layout_marginEnd="@dimen/common_padding_min"
    app:layout_constraintEnd_toEndOf="@id/guideline"
    app:layout_constraintTop_toBottomOf="@id/tilQuantity"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintDimensionRatio="16:9"/>
    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/ibProduct"
        android:src="@drawable/ic_image_serach"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="@id/imgProductPreview"
        app:layout_constraintEnd_toEndOf="@id/imgProductPreview"
        app:layout_constraintTop_toTopOf="@id/imgProductPreview"
        app:layout_constraintBottom_toBottomOf="@id/imgProductPreview"/>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/pbUpload"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="@dimen/common_padding_min"
        tools:progress="75"
        app:layout_constraintStart_toStartOf="@id/tilPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPrice"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvProgress"
        android:layout_marginTop="@dimen/common_padding_min"
        tools:text="Subiendo........75%"
        app:layout_constraintStart_toStartOf="@id/pbUpload"
        app:layout_constraintEnd_toEndOf="@id/pbUpload"
        app:layout_constraintTop_toBottomOf="@id/pbUpload"
        />

</androidx.constraintlayout.widget.ConstraintLayout>