<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/imgProduct"
        android:background="@color/gray_100"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="16:9"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginHorizontal="@dimen/common_padding_default"
        android:layout_marginTop="@dimen/common_padding_default"
        tools:text="Nombre del producto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgProduct"/>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/efabAddCart"
        android:text="@string/text_add_to_cart"
        android:textAlignment="center"
        app:icon="@drawable/ic_add_shopping_cart"
        app:iconGravity="textEnd"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/common_padding_default"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibSub"
        android:src="@drawable/ic_remove_circle"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintBottom_toTopOf="@id/efabAddCart"
        android:layout_marginBottom="@dimen/common_padding_medium"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNewQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_padding_min"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintStart_toEndOf="@id/ibSub"
        app:layout_constraintTop_toTopOf="@id/ibSub"
        app:layout_constraintBottom_toBottomOf="@id/ibSub"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtNewQuantity"
            android:ems="3"
            android:textAlignment="center"
            android:inputType="number"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibSum"
        android:src="@drawable/ic_add_circle"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toEndOf="@id/tilNewQuantity"
        app:layout_constraintTop_toTopOf="@id/ibSub"
        app:layout_constraintBottom_toBottomOf="@id/ibSub"
        android:layout_marginStart="@dimen/common_padding_min"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvQuantity"
        android:layout_marginBottom="@dimen/common_padding_default"
        android:text="@string/detail_quantity"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintBottom_toTopOf="@id/ibSub"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotalPrice"
        android:text="@string/total_price"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintStart_toEndOf="@id/ibSum"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintTop_toTopOf="@id/ibSum"
        app:layout_constraintBottom_toBottomOf="@id/ibSum"
        android:layout_marginStart="@dimen/common_padding_default"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintBottom_toTopOf="@id/tvQuantity"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvDescription"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:text="Descripción del producto"/>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>